--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p>A Dev</p>
         <p class="view"><a href="https://github.com/Glitchmaster-PE">View the Project on GitHub <small>Glitchmaster-PE</small></a></p>
         <ul>
-          <li class="single"><a href="https://github.com/Glitchmaster-PE/glitchmaster-pe.github.com">View On <strong>GitHub</strong></a></li>
+          <li class="single"><a href="https://github.com/Glitchmaster-PE">User on <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
