--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <ul>
           <li class="single"><a href="https://github.com/Glitchmaster-PE">User on <strong>GitHub</strong></a></li>
           <li class="single"><a href="https://github.com/Glitchmaster-PE/PMRunnerPro/">PMRunnerPro <strong>GitHub</strong></a></li>
+          <li class="single"><a href="https://github.com/Glitchmaster-PE/Plugins/">My Plugins <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
